# vario

./: .gitignore  .gitmodules  README.md  mkdocs.yml
docs/: abcd.md  hw.md  index.md  sw.md
hardware/: .gitignore  hardware.ioc  mkdocs.yml
hardware/docs/: index.md
hardware/vario_kicad/: New_Library.bak  New_Library.kicad_sym  audio_amp.kicad_sch  bme280.kicad_sch  fp-info-cache  fp-lib-table  leds.kicad_sch  mcu.kicad_sch  memory.kicad_sch  myswitch.kicad_sch  power.kicad_sch  switch.kicad_sch  vario_kicad.kicad_pcb  vario_kicad.kicad_prl  vario_kicad.kicad_pro  vario_kicad.kicad_sch
hardware/vario_kicad/fabrication/: vario_kicad-B_Cu.gbr  vario_kicad-B_Mask.gbr  vario_kicad-B_Paste.gbr  vario_kicad-B_Silkscreen.gbr  vario_kicad-Edge_Cuts.gbr  vario_kicad-F_Cu.gbr  vario_kicad-F_Mask.gbr  vario_kicad-F_Paste.gbr  vario_kicad-F_Silkscreen.gbr  vario_kicad-In1_Cu.gbr  vario_kicad-In2_Cu.gbr  vario_kicad.drl
hardware/vario_kicad/symbol_lib.pretty/: SWD_programming.kicad_mod  TS-1187A-B-A-B_switch.kicad_mod  battery_th.kicad_mod  lipo_footprint.kicad_mod  my_usbc.kicad_mod  speaker_footprint.kicad_mod
software/: Cargo.toml  oldcargolock  oldcargotoml  plot_data.py
software/.cargo/: config.toml
software/app/: Cargo.toml  README.md  build.rs  memory.x
software/app/.cargo/: config.toml
software/app/examples/: systick.rs
software/app/src/: lib.rs  main.rs
software/app/src/blinky_cpac/: main.rs
software/app/src/bsp/: clocks.rs  leds.rs  lib.rs  switches.rs  systick.rs  usb.rs
software/app/src/busy_loop_blinky/: main.rs
software/app/src/counters/: counters.rs  link_counters.x
software/app/src/systick_timer/: timer.rs
software/app/src/tim6/: main.rs
software/app/src/vario/: main.rs  state_machine.yaml  vario.rs
software/bme280-bindings-rs/: Cargo.toml  README.md  build.rs
software/bme280-bindings-rs/bosch-api/: wrapper.h
software/bme280-bindings-rs/src/: bindings.rs  lib.rs  lib1.rs
software/cpac-macros/: Cargo.toml
software/cpac-macros/src/: lib.rs
software/log_to_csv/: Cargo.toml
software/log_to_csv/src/: main.rs
software/open-vario/: Cargo.toml  build.rs  log_file.csv  log_vars.py
software/open-vario/.cargo/: config.toml
software/open-vario/src/: fir.rs  main.rs
software/stm32l0-cpac/: Cargo.toml  README.md  bindings.rs  build.rs
software/stm32l0-cpac/src/: c_bindings.rs  lib.rs
vario-stm32/: README.md
vario-stm32/hardware/vario_kicad/: vario_kicad.kicad_prl  vario_kicad.kicad_sch
vario-stm32/software/app/: Cargo.toml
vario-stm32/software/app/src/: main.rs
