[package]
authors = ["vasil-nikolov <vaskonikolov2003@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "app"
version = "0.1.0"

[dependencies]
# cortex-m = { version = "=0.7.6", features = ["critical-section-single-core"]}
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7"
critical-section = "1.2.0"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
# cortex-m-semihosting = "0.5"
panic-halt = "1.0.0"
stm32l0 = { version = "0.15.1", features = ["stm32l0x2", "rt"] }
bme280-bindings-rs = { path = "../bme280-bindings-rs" }


# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# embedded-alloc = "0.6.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --example device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"


# this lets you use `cargo fix`!
[[bin]]
name = "vario"
path = "src/vario/vario.rs"
test = false
bench = false

[[bin]]
name = "counters"
path = "src/counters/main.rs"
test = false
bench = false
