[package]
authors = ["vasil-nikolov <vaskonikolov2003@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "app"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"]}
cortex-m-rt = "0.7"
critical-section = "1.2.0"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
heapless = "0.8.0"
panic-halt = "1.0.0"
stm32l0 = { version = "0.15.1", features = ["stm32l0x2", "rt"] } # here for the 'rt' feature and interrupts, TODO think of a way to put these in the CPAC
stm32l0-cpac = { path = "../stm32l0-cpac" , features = ["safe-modify-reg"]}

# TODO check how to link externally compiled C lib
# bme280-bindings-rs = { path = "../bme280-bindings-rs" }


[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[lib]
name = "bsp"
path = "src/bsp/lib.rs"

[[bin]]
name = "busy_loop_blinky"
path = "src/busy_loop_blinky/main.rs"

[[bin]]
name = "blinky_cpac"
path = "src/blinky_cpac/main.rs"

[[bin]]
name = "vario"
path = "src/vario/main.rs"

[build-dependencies]
chrono = "0.4.41"
